--- a/.github/workflows/pull_request_automation.yml
+++ b/.github/workflows/pull_request_automation.yml
@@ -3,7 +3,7 @@ name: Build & Tests
 
 on:
   schedule:
-    - cron: '*/5 * * * * *'
+    - cron: '*/5 * * * *'
 jobs:
   detect-changes:
     name: Detect changes
